<resources>
    <string name="app_name">ANIME</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Anime</string>
    <string name="fragment_dragonbutterfly">Loài chuồn chuồn</string>
    <string name="fragment_bird2">Loài chim</string>
    <string name="fragment_elephant1">Loài voi</string>
    <string name="fragment_ladybug">Loài bọ cam</string>
    <string name="fragment_pig">Loài heo nhà</string>
    <string name="fragment_turtle">Loài rùa biển</string>
    <string name="fragment_bird">Loài chim</string>
    <string name="fragment_duck">Loài vịt</string>
    <string name="fragment_dolphin">Loài cá heo</string>
    <string name="fragment_dog">Loài chó</string>
    <string name="elephant">
        <b>Voi</b>\n
        Voi Việt Nam là quần thể voi sinh sống, phân bố tại Việt Nam, gắn bó với đời sống, lịch sử, văn hóa của cộng đồng các dân tộc Việt Nam. Voi Việt Nam thuộc nhóm voi châu Á và là loài động vật từng phân bố khắp các vùng miền ở Việt Nam, gắn bó với sản xuất, chiến đấu và văn hóa của các dân tộc ở Việt Nam.
        Tuy nhiên, hiện tại voi hoang dã đang trong tình trạng nguy ngập và chỉ hay xuất hiện ở Tây Nguyên, đặc biệt là Đắk Lắk.\n
        <b>Voi trong sử sách</b>\n
        Trong truyền thuyết đầu tiên của người Việt có nhắc đến Voi chín ngà, là sính lễ mà Vua Hùng bắt buộc khi Sơn Tinh và Thủy Tinh cầu hôn Mị Nương. Sử sách nhắc đến voi và thuần dưỡng voi là từ thời Hai Bà Trưng chống quân Hán và bà Triệu, họ đã dùng voi vào trong chiến trường đánh quân Ngô (con voi trắng một ngà). Voi được các triều đại phong kiến Việt Nam sử dụng rất nhiều vào trong quân sự lẫn dân sự, voi nhà và voi rừng chiếm tỉ lệ nhiều. Đến thời Quang Trung, voi là một trong những chiến binh cừ khôi nhất, giúp nhà vua đánh Chúa Trịnh dẹp Chúa Nguyễn, đánh ngoại bang quân Thanh, quân Xiêm.\n
        Vào cuối thời nhà Nguyễn triều Bảo Đại thì có soạn giả Tây phương ghi lại một số quan sát về voi của người Việt như người Việt chia voi thành hai loại, voi lớn gọi là "bõ bành", voi nhỏ là "bõ chóc".[1] Voi chiến từ những triều vua trước thì khi đã lập công ngoài chiến trận thì được đính một vòng bằng bạc vào cặp ngà.[2] Voi của vua được nuôi dưỡng tử tế và có đặt tên. Nhà vua thường dùng voi cưỡi khi đi săn và thích nhất con voi một ngà tên Một.\n
        <b>Cách thuần dưỡng và nuôi voi</b>\n
        Theo tác giả BlazeRicardo thì voi ở Đông Dương được săn bắt bằng ba cách. Xiêm và Lào thì dùng cách đóng một vòng rào bằng cây gỗ chắc chắn rồi lùa voi rừng vào nhốt lại. Cao Miên nhất là ở vùng Kompong Thom thì có lệ săn bắt voi vào mùa nước lớn, lùa voi bằng xuồng. Thợ săn dùng giáo nhọn đâm lùa voi. Cách này nguy hiểm hơn cả vì voi đau có thể tấn công, làm lật xuồng. Ở Việt Nam thì dùng thòng lọng để bắt voi.\n
        Theo tường thuật của Blazé khi tháp tùng vua Bảo Đại ở La Ngà thì cuộc săn bắt đầu khi thợ săn cưỡi đoàn voi nhà ùa vào đàn voi rừng ngược hướng gió để khỏi bị phát giác. Voi nhà thì chia thành ba loại. Đầu cùng là voi dìu (tiếng Anh beater); kế đến là voi fighter, lạm dịch là voi thúc, sau cùng là captor, tức voi săn. Mỗi con voi nhà có nài cưỡi voi ngồi ở đầu voi điều khiển và một người phó ở cổ voi. Thợ săn chính thì cầm một cần dài khoảng 3 mét, đầu cần mắc thòng lọng nối với đoạn thừng dài 20-30 mét. Khi voi rừng bỏ chạy thì voi dìu được điều khiển tiến vào để voi rừng bớt hoảng sợ. Voi dìu không cần voi lớn, chỉ cần nhanh chân để chạy len vào và trấn an nhóm voi rừng. Nếu voi rừng chạy loạn vào bờ bụi rừng sâu thì sẽ dùng voi dìu đẩy theo hướng đồng trống có chực sẵn voi săn. Kế đến điều voi săn tiến vào dùng đầu ghì lấy hông voi rừng trong khi người thợ lấy cần dài móc thòng lọng vào chân sau của voi. Người phó trên lưng voi săn sau đó thả lỏng hoặc kéo chặt thừng để sao thừng không bị rối. Voi rừng khi bị thòng lọng ở chân thì dần chậm lại rồi bị đưa đến một gốc cây lớn. Người thợ phó liền nhảy xuống đất và mau chân cầm cuộn thừng chạy quanh gốc cây buộc voi rừng vào đấy. Voi thúc, tức những con voi lớn nhất lúc này mới tiến vào cản voi rừng không tấn công người buộc thừng vào gốc cây.\n
        <b>Đặc điểm sinh học</b>\n
        Voi Việt Nam cũng giống như Voi châu Á, cặp ngà voi dài. Thân cũng không lớn bằng các loài Voi châu Phi, ăn các loài thực vật chủ yếu trái cây, thân các cây mềm như cây chuối, v,v..\n
        Vào các thời điểm này ngà voi các quản tượng không để dài cặp ngà nữa, thì việc để thích ứng môi trường như tự vệ kẻ thù, đào đất không thể được, các nguyên nhân cũng do sợ bị trộm cưa mất cặp ngà thì quản tượng phải cưa trước. Lông đuôi voi, dựa trên một niềm tin mù quáng, thường được dân gian cho rằng nó có thể trừ được ma quỷ, nên mọi người thường lấy lông đuôi voi làm các đồ trang sức cho riêng mình. Đổi lại lông đuôi voi bị người ta rứt trộm nhiều, voi ngày càng ít thì số lông ở phần đuôi cụt ngủn tìm được con nào đầy đủ lông ở phần đuôi là rất khó.\n
        Ngày nay voi nhà có nhiều điều đáng lo ngại là việc sinh đẻ của loài voi trong thời gian qua khá khiêm tốn, nhất là đàn voi nhà có thể được coi là bị "vô sinh" vì nhiều lý do khác nhau, trong đó có một số nguyên nhân chính như: voi thiếu môi trường để sinh sống và sinh hoạt để di truyền nòi giống, voi bị khai thác phục vụ du lịch đến mức kiệt quệ, voi bị bệnh nhưng có giải pháp điều trị. Chiều dài con trưởng thành 2.9m. Cao 1.8m, đường kính thân 1,5m
    </string>
    <string name="dragonbutterfly">
        <b>Chuồn chuồn</b>\n
        Chuồn chuồn (Odonata) là một bộ côn trùng với khoảng 4.500 loài hiện được biết tới, chia thành hai nhóm lớn: chuồn chuồn ngô (Anisoptera) và chuồn chuồn kim (Zygoptera), khác nhau chủ yếu ở tư thế của cánh khi đậu và hình dạng của ấu trùng. Chuồn chuồn là động vật không có xương sống và thuộc lớp sâu bọ của ngành chân khớp\n
        <b>Đặc điểm</b>\n
        Chuồn chuồn có đầu tròn và khá lớn so với thân được bao phủ phần lớn bởi hai mắt kép lớn hai bên, các cặp chân có thể bắt mồi dễ dàng trong khi bay. Hai cánh hai bên giống nhau, dài, mỏng và gần như trong suốt, và cử động độc lập nhau. Hệ gân cánh rất dày, nhiều gân gạch ngang chằng chịt, phức tạp, cuối bờ trước của cánh thường có mắt cánh là bộ phận điều chỉnh triệt tiêu rung động cơ học, đảm bảo cho cánh vững chắc. Phần thân bụng dài. Cơ quan miệng kiểu nghiền, chân mảnh hướng về trước. Râu nhỏ, có hai đốt và một lông nhỏ dài phân đốt. Phần phụ hậu môn ở đốt bụng thứ ba, thứ tư (ở con đực), thứ hai (ở con cái); cơ quan sinh dục ở đốt bụng thứ chín; cơ quan giao cấu thứ sinh ở đốt thứ hai (ở con đực).\n
        Loài chuồn chuồn lớn nhất thế giới hiện nay là loài chuồn chuồn kim khổng lồ Trung Mỹ, Megaloprepus coerulatus và Anax strenuus, một loài chuồn chuồn đặc hữu của quần đảo Hawaii. Trong quá khứ, đã từng có loài chuồn chuồn với sải cánh dài 60 cm,hóa thạch của nó có niên đại 285 triệu năm.\n
        Có khoảng 4.500 loài hiện được biết đến. Ở Việt Nam, trên 500 loài. Phần lớn các loài chuồn chuồn là côn trùng có ích, là thiên địch ăn thịt nhiều loài sâu hại cây trồng và ruồi, muỗi.\n
        <b>Môi trường sống</b>\n
        Chuồn chuồn là côn trùng biến thái một nửa. Thiếu trùng chuồn chuồn sống trong nước và có tên là con cơm nguội (còn gọi là con mày mạy), tùy vào khu vực mà nó còn nhiều tên gọi khác như chăn mày, khi trưởng thành thì sống trên cạn. Do vậy, người ta thường thấy các con chuồn chuồn trưởng thành sống gần các đầm hay ao hồ. Tuy nhiên cũng có nhiều loài sống cách xa môi trường nước.\n
        <b>Sinh sản, vòng đời</b>\n
        Trứng chuồn chuồn được đẻ vào mặt nước hoặc trên cành, lá thủy sinh gần ao, hồ, và các khu vực ẩm ướt hoặc trong mô cây ở nước, và nở thành tiền ấu trùng sống bằng các chất dinh dưỡng có trong trứng. Sau đó chúng tiếp tục biến thái thành thiếu trùng với khoảng 9-14 lần lột xác (ở hầu hết các loài), và trở thành loài ăn thịt tham lam đối với các loài sinh vật sống trong nước, kể cả những loài cá con. Hô hấp bằng mang. Thiếu trùng tiếp tục biến thái và lột xác, thường vào những lúc chập choạng hoàng hôn, và tiếp tục phát triển thành loài biết bay, tuy nhiên màu sắc vẫn chưa hình thành. Những côn trùng này sau đó biến thành các con trưởng thành có khả năng sinh sản. Con đực có một cơ quan nằm gần phía sau của ngực, bên trong có chứa túi tinh; chúng giao cấu bằng cách dùng các móc nằm ở phía đuôi của thân bụng con đực để giữ con cái ở phía sau đầu; con cái uốn cong thân bụng về phía trước để đón cơ quan giao cấu của con đực và nhận tinh. Còn nếu chưa tìm ra được chỗ phù hợp, chúng sẽ dùng cách khác để đẻ trứng và giao phối.\n
        <b>Lịch sử</b>\n
        Chuồn chuồn đã từng được xếp cùng với các loài phù du (Ephemeroptera) và một số bộ khác vào lớp Côn trùng cánh cổ (Palaeoptera), tuy nhiên cách sắp xếp này có vẻ như cận ngành. Đặc tính mà chuồn chuồn chia sẻ với phù du là bản chất cử động và điều khiển của bộ cánh (xem chi tiết tại bay (côn trùng)).\n
        Cũng có một thời kỳ người ta xếp Anisoptera thành một bộ phụ (phân bộ) bên cạnh một bộ phụ thứ ba, Anisozygoptera (chuồn chuồn cổ). Tuy nhiên, Anisoptera hiện được hạ cấp xuống thành một cận bộ thuộc bộ phụ Epiprocta sau khi người ta phát hiện ra rằng Anisozygoptera thực chất là một nhóm cận ngành bao gồm hầu hết các nhánh đã tuyệt chủng tại nhiều thời điểm trong quá trình tiến hóa của Anisoptera (Lohmann 1996, Rehn 2003).\n
    </string>
</resources>